apps/traefik/templates/traefik-dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.shivpatel.xyz`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      middlewares:
        - name: add-trailing-slash
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
